<resources>
    <string name="app_name">My First Application</string>
    <string name="textview">TextView</string>
    <string name="splash_screen_title">My first application</string>
    <string name="login_screen_title">Login Screen</string>
    <string name="login_username_label">Username:</string>
    <string name="login_username_hint">Please enter your username</string>
    <string name="login_password_label">Password:</string>
    <string name="login_password_hint">Please enter your password</string>
    <string name="login_ok_btn">OK</string>
    <string name="login_cancel_btn">Cancel</string>
</resources>
